<resources>
    <string name="app_name">Calculator</string>
    <string name="button_ac">AC</string>
    <string name="button_plus_minus">+/-</string>
    <string name="button_percent">%</string>
    <string name="button_division">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multiplication">*</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_subtraction">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_addition">+</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_quality">=</string>
    <string name="text_view">0</string>


    <string name="button_rand">Rand</string>
    <string name="button_pi">\u03C0</string>
    <string name="button_e">e</string>
    <string name="button_tanh">tanh</string>
    <string name="button_cosh">cosh</string>
    <string name="button_sinh">sinh</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_rad">Rad</string>
    <string name="button_deg">Deg</string>
    <string name="button_ln">ln</string>
    <string name="button_log">log</string>
    <string name="button_x_fact">x!</string>
    <string name="button_2nd_root">\u221Ax</string>
    <string name="button_ee">EE</string>
    <string name="button_left_bracket">(</string>
    <string name="button_right_bracket">)</string>
    <string name="button_mc">mc</string>
    <string name="button_mplus">m+</string>
    <string name="button_mminus">m-</string>
    <string name="button_mr">mr</string>
</resources>
